--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -77,6 +77,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingHorizontal="@dimen/margin_16"
+            android:gravity="center_horizontal"
             >
 
             <TextView
@@ -90,6 +91,7 @@
                 android:id="@+id/imgIcon"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:layout_marginTop="10dp"
                 tools:src="@drawable/ic_launcher_background"
                 />
 
